--- a/10 - adding categories/style.css
+++ b/10 - adding categories/style.css
@@ -20,9 +20,31 @@ li:hover {
     margin-bottom: 10px;
 }
 
+select {
+    width: 200px;
+    height: 30px;
+    margin-bottom: 10px;
+}
+
 #add-todo {
     width: 80px;
     height: 30px;
+    margin-bottom: 10px;
+}
+
+button {
+    width: 80px;
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+.display-option{
+    display: inline;
+    margin-bottom: 10px;
+    margin-right: 20px;
+}
+
+#display-options {
     margin-bottom: 10px;
 }
 
